Preexisting bug in TestDistribPackageStore.assertResponseValues